src/ingress/ingress-apis.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tripviewer-apis
  namespace: jungho-apis
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: poi
          servicePort: 80
        path: /api/poi
        pathType: Prefix
      - backend:
          serviceName: userprofile
          servicePort: 80
        path: /api/user
        pathType: Prefix
      - backend:
          serviceName: userjava
          servicePort: 80
        path: /api/user-java
        pathType: Prefix
      - backend:
          serviceName: trips
          servicePort: 80
        path: /api/trips
        pathType: Prefix
