src/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tripviewer
  namespace: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /static/$2
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: trips.tripviewer-apis
          servicePort: 80
        path: /api/trips
      - backend:
          serviceName: poi.tripviewer-apis
          servicePort: 80
        path: /api/poi
      - backend:
          serviceName: userjava.tripviewer-apis
          servicePort: 80
        path: /api/user-java
      - backend:
          serviceName: userjava.tripviewer-apis
          servicePort: 80
        path: /api/user
      - backend:
          serviceName: tripviewer.tripviewer
          servicePort: 80
        path: /
